<?xml version="1.0" encoding="utf-8"?>

<layout>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="3dp"
            android:padding="5dp">


            <com.think360.cmg.widgets.customfonts.RobotoNormalTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/proyecto"
                android:textColor="@color/colorPrimary" />

            <com.think360.cmg.widgets.customfonts.RobotoNormalTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/inicio"
                android:textColor="@color/colorPrimary" />

            <com.think360.cmg.widgets.customfonts.RobotoNormalTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/estado"
                android:textColor="@color/colorPrimary" />

            <com.think360.cmg.widgets.customfonts.RobotoNormalTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center_horizontal"
                android:text="@string/fecha"
                android:textColor="@color/colorPrimary" />
        </LinearLayout>

        <View

            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="@color/appGray" />

        <android.support.v7.widget.RecyclerView
            android:overScrollMode="never"
            android:id="@+id/rvWorkHistory"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />


    </LinearLayout>
</layout>