<?xml version="1.0" encoding="utf-8"?>


<layout xmlns:app="http://schemas.android.com/apk/res-auto">


    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"

        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context="com.think360.cmg.view.acitivity.LoginActivity">

        <ImageView
            android:id="@+id/ivLogo"
            android:layout_centerHorizontal="true"
            android:layout_width="196dp"
            android:src="@drawable/cmg_logo"
            android:layout_height="196dp" />

        <LinearLayout
            android:layout_below="@+id/ivLogo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">


            <TextView
                style="@style/TextViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_mobile_no" />


            <EditText
                android:id="@+id/etEmail"
                style="@style/EditTextRoboto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:nextFocusForward="@+id/etPassword"
                android:text="@string/amitchauhan1_think360_gmail_com" />

            <TextView
                style="@style/TextViewHeader"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password" />


            <EditText
                android:id="@+id/etPassword"
                style="@style/EditTextRoboto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:text="@string/_123456" />


            <!-- Password Re-enter Label -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:layout_below="@+id/include"
                android:layout_gravity="right"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:gravity="center"
                android:orientation="horizontal"
                android:visibility="visible">


                <RelativeLayout

                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="left|center_vertical"
                    android:gravity="left|center_vertical">

                    <Switch
                        android:id="@+id/switch_gprs"
                        style="@style/CustomSwitchButton"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:checked="false"
                        android:gravity="center_vertical"
                        app:buttonTint="@color/appYellow" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_toRightOf="@+id/switch_gprs"
                        android:checked="false"
                        android:gravity="center_vertical"
                        android:text="Remember me"
                        android:textColor="@color/appGray"
                        app:buttonTint="@color/appYellow" />

                </RelativeLayout>

                <TextView
                    android:id="@+id/tvForgetPassword"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginRight="3dp"
                    android:layout_weight="1"
                    android:gravity="right|center_vertical"
                    android:text="Forgot Password ?"
                    android:textAppearance="?android:attr/textAppearanceSmall"
                    android:textColor="@color/appGray" />

            </LinearLayout>

            <!-- Signup Button -->
            <com.think360.cmg.utils.customfonts.RobotoLightTextView
                android:id="@+id/btnSignIn"
                android:layout_width="fill_parent"
                android:layout_height="48dp"
                android:layout_gravity="center"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:background="@drawable/rectanglefilled"
                android:gravity="center"
                android:onClick="login"
                android:text="@string/login"
                android:textColor="@color/white"
                android:textSize="18sp" />


        </LinearLayout>

    </RelativeLayout>

</layout>
